--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,30 +1,36 @@
 @font-face {
   font-family: 'NanumSquareNeoLight';
+  font-display: block;
   src: url('./NanumSquareNeo-aLt.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'NanumSquareNeo';
+  font-display: block;
   src: url('./NanumSquareNeo-bRg.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'NanumSquareNeoBold';
+  font-display: block;
   src: url('./NanumSquareNeo-cBd.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'NanumSquareNeoExtraBold';
+  font-display: block;
   src: url('./NanumSquareNeo-dEb.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'NanumSquareNeoHeavy';
+  font-display: block;
   src: url('./NanumSquareNeo-aLt.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'PartialSansKR';
+  font-display: block;
   src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/PartialSansKR-Regular.woff2')
     format('woff2');
   font-weight: normal;
@@ -34,9 +40,9 @@
 /* latin-ext */
 @font-face {
   font-family: 'EduHand';
+  font-display: block;
   font-style: normal;
   font-weight: 400 700;
-  font-display: swap;
   src: url(https://fonts.gstatic.com/s/eduauvicwanthand/v1/C8c94dY1tX2x0uuiUHFS4y7ERV-jfqJ6x06dH9MtW4Q.woff2)
     format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
@@ -47,8 +53,8 @@
 @font-face {
   font-family: 'EduHand';
   font-style: normal;
+  font-display: block;
   font-weight: 400 700;
-  font-display: swap;
   src: url(https://fonts.gstatic.com/s/eduauvicwanthand/v1/C8c94dY1tX2x0uuiUHFS4y7ERV-jfqJ6x06dEdMt.woff2)
     format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
@@ -58,6 +64,7 @@
 
 @font-face {
   font-family: 'NanumBarunpen';
+  font-display: block;
   src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumBarunpen/NanumBarunpenR.eot);
   src:
     url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumBarunpen/NanumBarunpenR.eot?#iefix)
@@ -70,6 +77,7 @@
 
 @font-face {
   font-family: 'NanumBarunpenB';
+  font-display: block;
   src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumBarunpen/NanumBarunpenB.eot);
   src:
     url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumBarunpen/NanumBarunpenB.eot?#iefix)
